# Injective-smart-contracts

./: .gitignore  Cargo.toml  README.md  software_architecture.xml
.cargo/: config
.github/workflows/: Basic.yml  Release.yml
schema/: inj-interchain-persona.json
schema/raw/: execute.json  query.json  response_to_get_persona.json
src/: chain.rs  contract.rs  error.rs  lib.rs  msg.rs  persona.rs  query.rs  state.rs  wallet.rs
tests/: integration.rs  unit.rs
ts/: codegen_script.ts  package.json
ts/types/: InjectiveInterchainPersona.client.ts  InjectiveInterchainPersona.message-composer.ts  InjectiveInterchainPersona.types.ts  index.ts
